# Basics-of-programming

./: README.md
Exam/: CMakeLists.txt  GameForm.cpp  GameForm.h  GameMap.cpp  GameMap.h  Gamer.cpp  Gamer.h  StartForm.cpp  StartForm.h  Документация.txt
lab_1/: CMakeLists.txt  laba_20_01.cpp  решение.txt
lab_1/inc/: functions.hpp
lab_1/src/: functions.cpp
lab_10/: CMakeLists.txt  main.cpp
lab_10/inc/: BMP.hpp
lab_10/inc/mathlib/: matrix.hpp
lab_10/src/: BMP.cpp
lab_11/: CMakeLists.txt  main.cpp
lab_11/inc/: code.hpp
lab_12/: CMakeLists.txt  pointers.cpp
lab_12/inc/: pointers.hpp
lab_13/: CMakeLists.txt
lab_13/inc/: camera.hpp  matrix.hpp  scene.hpp
lab_13/src/: camera.cpp  scene.cpp
lab_2/: отчет.txt
lab_2/bubble_sort/: CMakeLists.txt  bubble_sort.cpp
lab_2/quick_sort/: CMakeLists.txt  quick_sort.cpp
lab_3/: отчет.txt
lab_3/task 1. Binary_search/: 3_task.cpp  CMakeLists.txt
lab_3/task_1. Cycles/: 3_1_task.cpp  CMakeLists.txt
lab_3/task_2/: CMakeLists.txt  task_2.cpp
lab_4/: Время выполнения.txt
lab_4/Array/: CMakeLists.txt  array.cpp
lab_4/List/: CMakeLists.txt  list.cpp
lab_5/: CMakeLists.txt  input.txt  lab5.cpp
lab_6/: CMakeLists.txt  input.txt  main.cpp  объяснение выбора .txt
lab_6/inc/: list.hpp
lab_6/src/: list.cpp
lab_7/: CMakeLists.txt  matrix.cpp
lab_8/: CMakeLists.txt  matrix_8.cpp
lab_9/: main.cpp
lab_9/inc/: BMP.hpp
lab_9/inc/mathlib/: matrix.hpp
lab_9/src/: BMP.cpp
